--- a/OskitReact/package.json
+++ b/OskitReact/package.json
@@ -12,11 +12,14 @@
     "dependencies": {
         "@fluentui/react": "^8.121.8",
         "@fluentui/react-components": "9.55.1",
+        "@fluentui/react-datepicker-compat": "^0.4.53",
         "@fluentui/react-icons": "^2.0.265",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "@reduxjs/toolkit": "^2.3.0",
+        "@tanstack/react-query": "^5.59.20",
         "animation.css": "^0.1.0",
         "bootstrap": "^5.3.3",
+        "immer": "^10.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-icons": "^5.3.0",
