--- a/OskitAPI/appsettings.json
+++ b/OskitAPI/appsettings.json
@@ -1,7 +1,6 @@
 {
     "ConnectionStrings": {
-        //"MoskitContext": "Data Source = MoskitContext.sqlite3"
-        "MoskitContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=MoskitContext;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+        "MoskitContext": "Data Source = MoskitContext.sqlite3"
     },
     "Logging": {
         "LogLevel": {
