--- a/OskitReact/package.json
+++ b/OskitReact/package.json
@@ -19,6 +19,7 @@
         "@tanstack/react-query": "^5.59.20",
         "animation.css": "^0.1.0",
         "bootstrap": "^5.3.3",
+        "http-status-codes": "^2.3.0",
         "immer": "^10.1.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -26,6 +27,7 @@
         "react-query": "^3.39.3",
         "react-router": "^6.28.0",
         "react-router-dom": "^6.28.0",
+        "rxjs": "^7.8.1",
         "sass": "^1.80.6"
     },
     "devDependencies": {
