--- a/Librebooks/Librebooks.csproj
+++ b/Librebooks/Librebooks.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Accounting\**" />
     <Compile Remove="Areas\Companies\Data\**" />
     <Compile Remove="Areas\Inventory\Data\**" />
     <Compile Remove="Areas\Suppliers\Controllers\**" />
@@ -24,7 +25,9 @@
     <Compile Remove="Areas\Suppliers\Models\**" />
     <Compile Remove="Areas\Admin\Data\**" />
     <Compile Remove="Extensions\Data\**" />
+    <Compile Remove="Extensions\Identity\**" />
     <Compile Remove="Providers\Managers\**" />
+    <Content Remove="Areas\Accounting\**" />
     <Content Remove="Areas\Companies\Data\**" />
     <Content Remove="Areas\Inventory\Data\**" />
     <Content Remove="Areas\Suppliers\Controllers\**" />
@@ -32,7 +35,9 @@
     <Content Remove="Areas\Suppliers\Models\**" />
     <Content Remove="Areas\Admin\Data\**" />
     <Content Remove="Extensions\Data\**" />
+    <Content Remove="Extensions\Identity\**" />
     <Content Remove="Providers\Managers\**" />
+    <EmbeddedResource Remove="Areas\Accounting\**" />
     <EmbeddedResource Remove="Areas\Companies\Data\**" />
     <EmbeddedResource Remove="Areas\Inventory\Data\**" />
     <EmbeddedResource Remove="Areas\Suppliers\Controllers\**" />
@@ -40,7 +45,9 @@
     <EmbeddedResource Remove="Areas\Suppliers\Models\**" />
     <EmbeddedResource Remove="Areas\Admin\Data\**" />
     <EmbeddedResource Remove="Extensions\Data\**" />
+    <EmbeddedResource Remove="Extensions\Identity\**" />
     <EmbeddedResource Remove="Providers\Managers\**" />
+    <None Remove="Areas\Accounting\**" />
     <None Remove="Areas\Companies\Data\**" />
     <None Remove="Areas\Inventory\Data\**" />
     <None Remove="Areas\Suppliers\Controllers\**" />
@@ -48,6 +55,7 @@
     <None Remove="Areas\Suppliers\Models\**" />
     <None Remove="Areas\Admin\Data\**" />
     <None Remove="Extensions\Data\**" />
+    <None Remove="Extensions\Identity\**" />
     <None Remove="Providers\Managers\**" />
   </ItemGroup>
 
@@ -71,14 +79,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Areas\Accounting\Controllers\" />
-    <Folder Include="Areas\Accounting\Data\" />
-    <Folder Include="Areas\Accounting\Models\" />
-    <Folder Include="Areas\Accounting\Services\" />
-    <Folder Include="Extensions\Identity\" />
   </ItemGroup>
 
 </Project>
